<resources>
    <string name="app_name" translatable="false">Snack</string>
    <string name="facebook_app_id" translatable="false">247890904137081</string>
    <string name="continue_with_gmail">Sign Up with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email_amp_password"><![CDATA[Continue with Email & Password]]></string>
    <string name="gathered_on_this_device">Gathered on this device: %1$s</string>
    <string name="email_changed">Email successfully changed</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="password_changed">Password changed</string>
    <string name="on_air_wi_fi">on air/Wi-Fi</string>
    <string name="not_connected">Not connected</string>
    <string name="no_history_available">No history available</string>
    <string name="history_of_your_payouts">Here you will see the history of your\npayouts</string>
    <string name="personal_info">Personal info</string>
    <string name="no_data_available">No data available</string>
    <string name="your_stats_will_appear_when_you_ll_nstart_to_share_traffic">Your stats will appear when you’ll\nstart to share traffic!</string>
    <string name="card_details">Card details</string>
    <string name="ex_john_doe">ex. John Doe</string>
    <string name="sum_to_payout">Sum to payout</string>
    <string name="enter_amount">Enter amount</string>
    <string name="cardholder_name">Cardholder name</string>
    <string name="ex_card_number" translatable="false">1111 1111 1111 1111</string>
    <string name="card_number_empty">Card number is empty</string>
    <string name="not_valid_card_number">Not valid card number</string>
    <string name="payout_is_empty">Payout sum is empty</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="payout_100_complete">Payout 100% complete</string>
    <string name="terms_of_use" translatable="false">https://snck.app/terms</string>
    <string name="privacy_policy" translatable="false">https://snck.app/privacy</string>
    <string name="request_a_payout">Request a payout</string>
    <string name="send_email">Send email</string>
    <string name="resend_email">Resend</string>
    <string name="collect_minimum_10_to_request_a_payout">Collect minimum $10 to request a payout</string>
    <string name="share_traffic">Share traffic</string>
    <string name="stop_sharing_traffic">Stop sharing traffic</string>
    <string name="snack_site">https://snack.ggpa.ru/</string>
    <string name="restore_password">Restore password</string>
    <string name="email_has_been_sent_n_reset_your_password_using_the_link_inside">Email has been sent.\n Reset your password using the link inside</string>
    <string name="open_mailbox">Open mailbox</string>
    <string name="you_got_5">You got $5</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email Address</string>
    <string name="earned_today">Earned today</string>
    <string name="dim_screen">Select to dim your screen and save battery power. Turn off anytime by tapping your screen</string>
    <string name="_0_0_mb">0.0 Mb</string>
    <string name="start_sharing_traffic_to_earn_more_money">Start sharing traffic to earn more money!</string>
    <string name="power_saving">Power saving mode is on\n To turn it off, tap the screen</string>
    <string name="turn_off">Turn off</string>
    <string name="confirm_email">Confirm email</string>
    <string name="confirm_your_email">Confirm your email to complete funds\nwithdrawal</string>
    <string name="send_confirmation_letter">Send confirmation letter</string>
    <string name="skip">Skip</string>
    <string name="do_you_want_to_disable_nmobile_data_usage">Do you want to disable\nmobile data usage?</string>
    <string name="you_ll_earn_less_if_you_will_turn_off_this_setting">You’ll earn less if you will turn off this setting</string>
    <string name="disable_anyway">Disable anyway</string>
    <string name="do_you_really_want_nto_log_out">Do you really want\nto log out?</string>
    <string name="we_ll_miss_you_here">We’ll miss you here</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="message_has_been_sent">Message has been sent</string>
    <string name="we_will_review">We will review your question and reply in 1-2\nworking days to your email. Kindly wait</string>
    <string name="back_to_settings">Back to settings</string>
    <string name="ask_another_one">Ask another one</string>
    <string name="new_version">New version of Snack app\navailable</string>
    <string name="open_snack_site">Open Snack site and install</string>
    <string name="start_sharing_traffic">Start sharing traffic</string>
    <string name="close">Close</string>
    <string name="you_need_to_confirm">You need to confirm your email to withdraw funds</string>
    <string name="power_saving_mode">Power-saving mode</string>
    <string name="gathered_today">Gathered today</string>
    <string name="device">Device</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="let_your_excess_traffic_work">Let your excess traffic work</string>
    <string name="snack_allows">Snack allows you to get money by sharing your Internet connection: download the app, sign up, leave it on the background and earn cash.</string>
    <string name="stable_passive_income">Stable passive income</string>
    <string name="gain_15">Gain 15 cents for 1 GB of unused traffic by doing literally nothing except sharing your Internet connection.</string>
    <string name="no_preconditions_to_join">No preconditions to join</string>
    <string name="the_only_thing">The only thing you need is unused bandwidth. No subscription fees, embedded payments, or basic/pro versions of the app.</string>
    <string name="privacy_protected">Privacy protected</string>
    <string name="the_app_does_not_access">The app does not access the user\'s browsing history or any activity records. With Snack, you stay totally anonymous.</string>
    <string name="current_balance">Current balance</string>
    <string name="earnings">Earnings</string>
    <string name="your_stats_will_appear">Your stats will appear when you’ll start to share traffic!</string>
    <string name="last_week">Last week</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="the">The</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="card_number">Card number</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="sharing_settings">Sharing settings</string>
    <string name="allow_mobile_data_usage">Allow mobile data usage</string>
    <string name="stop_sharing_when_battery_is_low">Stop sharing when battery is low</string>
    <string name="no_limits">No limits</string>
    <string name="other">Other</string>
    <string name="help">Help</string>
    <string name="privacy_policy1">Privacy Policy</string>
    <string name="terms_of_use1">Terms of Use</string>
    <string name="log_out">Log out</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="save">Save</string>
    <string name="weak">Weak</string>
    <string name="minimum_8_characters">Minimum 8 characters</string>
    <string name="general_questions">General questions</string>
    <string name="how_does_snack_work">How does Snack work?</string>
    <string name="how_to_get_started">How to get started?</string>
    <string name="technical_questions">Technical questions</string>
    <string name="what_is_the_minimum">What is the minimum balance threshold to withdraw money?</string>
    <string name="are_there_any_withdrawal_fees">Are there any withdrawal fees?</string>
    <string name="how_to_make_a_payout">How to make a payout?</string>
    <string name="how_to_stop_sharing_traffic">How to stop sharing traffic?</string>
    <string name="does_it_secure">Does it secure?</string>
    <string name="payout_questions">Payout questions</string>
    <string name="account_questions">Account questions</string>
    <string name="select_the_limit">Select the limit of traffic, that you want to share with us on monthly basis.</string>
    <string name="_100_mb">100 Mb</string>
    <string name="_500_mb">500 Mb</string>
    <string name="_1_gb">1 Gb</string>
    <string name="question">Question</string>
    <string name="describe_your_problem">Describe your problem</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_a_recovery_link">Get a recovery link</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_password">Create password</string>
    <string name="what_s_your_email">What’s your email?</string>
    <string name="i_accept">I accept</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="already_a_member">Already a member?</string>
    <string name="payout_history">Payout history</string>
    <string name="ask_question">Ask a question</string>
    <string name="welcome_to_snack"><![CDATA[Welcome to <font color=#C35588>Snack</font>!]]></string>
    <string name="question_required">Question required</string>
    <string name="payout_completed_on">Payout: %1$.1f%% complete</string>
    <string name="the_stats_is_updated_hourly">The stats is updated hourly</string>
    <string name="password_mismatch">Password mismatch, check the spelling</string>
    <string name="setup_snack_header_text">Настроить Snack</string>
    <string name="setup_snack_title">Использовать мобильные данные</string>
    <string name="setup_snack_hint">Если выключить, Snack будет работать только по Wi-Fi</string>
    <string name="setup_snack_setup_limit_text">Установить лимит мобильных данных</string>
    <string name="setup_snack_setup_limit_text_hint">Установить сколько мобильных данных Snack может использовать каждый месяц</string>
    <string name="setup_snack_limit_mobile_data_text">Лимит мобильных данных</string>
    <string name="setup_snack_limit_mobile_data_text_hint">Применяется в течение каждого месяца</string>
    <string name="setup_snack_statistic_hint">Статистика использования в приложении Android может иметь расхождения</string>
    <string name="setup_snack_done_button">Выполнено</string>
    <string name="setup_snack_yes_button">Да</string>
    <string name="setup_snack_no_button">Нет</string>

    <string name="privacy_confirmation_button_text">Accept</string>
</resources>