<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:clickable="true"
    android:clipToPadding="false"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_black"
        app:title="Limit monthly traffic" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hint"
        style="@style/Text.Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/select_the_limit" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioNoLimit"
        android:layout_marginTop="@dimen/padding_default"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioNoLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/no_limits" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:fontFamily="@font/inter_regular"
            android:text="@string/_100_mb"
            android:layout_height="wrap_content" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:fontFamily="@font/inter_regular"
            android:text="@string/_500_mb"
            android:layout_height="wrap_content" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:fontFamily="@font/inter_regular"
            android:text="@string/_1_gb"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_default"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>