<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:clickable="true"
    android:clipToPadding="false"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_back_black"
        app:title="@string/change_email"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hint"
        style="@style/Text.Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/email_address" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_default"
        app:endIconDrawable="@drawable/ic_done"
        app:endIconMode="custom"
        app:endIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_default"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>