<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_default"
        android:src="@drawable/ic_bonus_wallet" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_medium"
        android:fontFamily="@font/inter_bold"
        android:text="@string/you_got_5"
        android:textColor="@color/primary"
        android:textSize="18sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginBottom="@dimen/padding_default"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/start_sharing_traffic_to_earn_more_money"
        android:textColor="@color/text_normal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginBottom="@dimen/padding_small"
        android:text="@string/start_sharing_traffic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginBottom="@dimen/padding_default"
        android:foreground="@drawable/ripple_button_primary"
        android:text="@string/close" />

</LinearLayout>
