<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign_up"
    android:clickable="true"
    android:elevation="@dimen/padding_large"
    android:focusable="true"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/Text.Title2.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/what_s_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hint"
        style="@style/Text.Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/email_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_default"
        app:endIconDrawable="@drawable/ic_done"
        app:endIconMode="custom"
        app:endIconTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_default"
        android:layout_marginEnd="@dimen/padding_default"
        android:text="@string/i_accept"
        android:textColorLink="@color/primary"
        app:buttonTint="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/padding_default"
        android:fontFamily="@font/inter_semibold"
        android:foreground="@drawable/ripple_button_primary"
        android:padding="@dimen/padding_micro"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/primary"
        app:buttonTint="@color/primary"
        app:layout_constraintBaseline_toBaselineOf="@id/cbTerms"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/cbTerms" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelSignIn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/padding_default"
        android:text="@string/already_a_member"
        android:textColorLink="@color/primary"
        app:buttonTint="@color/primary"
        app:layout_constraintBaseline_toBaselineOf="@id/btnSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSignIn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/padding_default"
        android:fontFamily="@font/inter_semibold"
        android:foreground="@drawable/ripple_button_primary"
        android:padding="@dimen/padding_small"
        android:text="@string/sign_in"
        android:textColor="@color/primary"
        app:buttonTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/labelSignIn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNext"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/padding_default"
        android:elevation="@dimen/padding_default"
        android:enabled="false"
        android:foreground="@drawable/bg_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>